tests/packaging-test/test_out/invalid-module.txt
error: invalid module path
 --> invalid-module\root\a.ctl:2:5
  |
2 |     "./a/b"
  |     ^^^^^^^ derived from this
  |
  = info: path searched: `invalid-module\root\a\b.ctl`
  = info: exact io error: file not found

